Updated CSS to prevent poor word wrapping on FF

--- a/wp-content/themes/ppo/assets/less/app.less
+++ b/wp-content/themes/ppo/assets/less/app.less
@@ -579,12 +579,7 @@ section.filelist {
             color: #444;
             font-family: tahoma;
             font-weight: bold;
-            -ms-word-break: break-all;
-            word-break: break-all;
-
-            /* Non standard for webkit */
-            word-break: break-word;
-
+            word-wrap: break-word;
             -webkit-hyphens: auto;
             -moz-hyphens: auto;
             -ms-hyphens: auto;
